# BayesGeom

./: README.md
src/: CMakeLists.txt  bayesmesh.py  complex.py  numpy_utils.hpp  predicates.c  predicates.h  pyPredicates.cpp  setup.py  static_ropetest.py  test_preds.py
